--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header class="container">
-        <a href="index.html" class="btn btn-alt">
-            <section class="hero container">
+        <a href="index.html">
+            <section class="container">
                 <h1>Styles Conference</h1>
             </section>
         </a>
@@ -24,11 +24,11 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <section class="container">
+    <section class="hero container">
         <h2>Dedicated to the Craft of Building Websites</h2>
         <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
             technologies. Join us this August!</p>
-        <a href="register.html">Register Now</a>
+        <a class="btn btn-alt" href="register.html">Register Now</a>
     </section>
     <section class="container">
         <a href="speakers.html">
