--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
-    <header class="container">
-        <a href="index.html">
-            <section class="container">
-                <h1>Styles Conference</h1>
-            </section>
-        </a>
+    <header class="container group">
+
+        <section class="container">
+            <h1 class="logo">
+                <a href="index.html">Styles <br /> Conference</a>
+            </h1>
+        </section>
+
         <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
         <nav>
             <a href="index.html">Home</a>
@@ -51,7 +53,7 @@
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
     </section>
-    <footer class="container">
+    <footer class="primery-footer container group">
         <small>&copy; Styles Conference</small>
         <nav>
             <a href="index.html">Home</a>
