feat: add header and footer on the pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
     </section>
-    <footer class="primery-footer container group">
+    <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         <nav>
             <a href="index.html">Home</a>
