--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
 </head>
 
 <body>
+    <!--Header-->
     <header class="container group">
 
-        <section class="container">
-            <h1 class="logo">
-                <a href="index.html">Styles <br /> Conference</a>
-            </h1>
-        </section>
+
+        <h1 class="logo">
+            <a href="index.html">Styles <br /> Conference</a>
+        </h1>
+
 
         <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
         <nav>
@@ -26,33 +26,51 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
+
+    <!--Hero-->
+
     <section class="hero container">
         <h2>Dedicated to the Craft of Building Websites</h2>
         <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
             technologies. Join us this August!</p>
         <a class="btn btn-alt" href="register.html">Register Now</a>
     </section>
-    <section class="container">
-        <a href="speakers.html">
-            <h5>Speakers</h5>
-            <h3>World-Class Speakers</h3>
-        </a>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+
+    <!--Teasers-->
+
+    <section class="grid">
+
+        <!-- Spekers -->
+
+        <section class="col-1-3">
+            <a href="speakers.html">
+                <h5>Speakers</h5>
+                <h3>World-Class Speakers</h3>
+            </a>
+            <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+        </section>
+        <section class="col-1-3">
+            <a href="schedule.html">
+                <h5>Schedule</h5>
+                <h3>Three Inspiring Days</h3>
+            </a>
+            <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        </section><!--
+            
+            Venue
+
+        -->
+        <section class="col-1-3">
+            <a href="venue.html">
+                <h5>Venue</h5>
+                <h3>The Chicago Theatre</h3>
+            </a>
+            <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+        </section>
     </section>
-    <section class="container">
-        <a href="schedule.html">
-            <h5>Schedule</h5>
-            <h3>Three Inspiring Days</h3>
-        </a>
-        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-    </section>
-    <section class="container">
-        <a href="venue.html">
-            <h5>Venue</h5>
-            <h3>The Chicago Theatre</h3>
-        </a>
-        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
-    </section>
+
+    <!--Footer-->
+
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         <nav>
