--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
         <!-- Spekers -->
 
-        <section class="teasers col-1-3">
+        <section class="teaser col-1-3">
             <a href="speakers.html">
                 <h5>Speakers</h5>
                 <h3>World-Class Speakers</h3>
             </a>
             <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
         </section>
-        <section class="teasers col-1-3">
+        <section class="teaser col-1-3">
             <a href="schedule.html">
                 <h5>Schedule</h5>
                 <h3>Three Inspiring Days</h3>
@@ -63,7 +63,7 @@
             Venue
 
         -->
-        <section class="teasers col-1-3">
+        <section class="teaser col-1-3">
             <a href="venue.html">
                 <h5>Venue</h5>
                 <h3>The Chicago Theatre</h3>
