--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--Header-->
-    <header class="container group">
+    <header class="primary-header container group">
 
 
         <h1 class="logo">
