--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="container group">
+    <header class="primary-header container group">
 
         <section class="container">
             <h1 class="logo">
