add in the every pages presentation paragraph

--- a/speakers.html
+++ b/speakers.html
@@ -29,7 +29,9 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <!--row alt-->
+
+    <!--Lead-->
+
     <section class="row-alt">
         <div class="lead container">
             <h1>Speakers</h1>
