--- a/register.html
+++ b/register.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <!--Header-->
+
     <header class=" primary-header container group">
 
         <section class="container">
@@ -29,6 +31,21 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
+    <!-- Lead -->
+
+    <section class="row-alt">
+        <div class="lead container">
+
+            <h1>Register</h1>
+
+            <p>Every year we aim to have an unbelievable time, and this year we&#8217;d love it for you to join us.
+                Conference passes only cost $99, one of the best values you&#8217;ll find.</p>
+
+        </div>
+    </section>
+
+    <!--Footer-->
+
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         <nav class="nav">
