--- a/schedule.html
+++ b/schedule.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header class="primary-header container group">
 
         <section class="container">
@@ -29,6 +30,21 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
+
+    <!-- Lead -->
+
+    <section class="row-alt">
+        <div class="lead container">
+
+            <h1>Schedule</h1>
+
+            <p>The conference opens with amazing workshops and continues with two days of incredible talks and keynotes,
+                all of which are facilitated by industry-leading experts.</p>
+
+        </div>
+    </section>
+
+    <!--Foorer-->
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         <nav class="nav">
