--- a/venue.html
+++ b/venue.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header class="primary-header container group">
 
         <section class="container">
@@ -29,6 +30,19 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
+    <!-- Lead -->
+
+    <section class="row-alt">
+        <div class="lead container">
+
+            <h1>Venue</h1>
+
+            <p>The conference is held at The Chicago Theatre, a beautiful historical landmark. The conference hotel,
+                Hotel Chicago, is a short walk away down State Street.</p>
+
+        </div>
+    </section>
+    <!--Footer-->
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
         <nav class="nav">
