fix: make position of the logo same of on the each page

--- a/speakers.html
+++ b/speakers.html
@@ -17,11 +17,11 @@
 
     <header class="primary-header container group">
 
-        <section class="container">
-            <h1 class="logo">
-                <a href="index.html">Styles <br /> Conference</a>
-            </h1>
-        </section>
+
+        <h1 class="logo">
+            <a href="index.html">Styles <br /> Conference</a>
+        </h1>
+
 
         <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
         <nav class="nav primary-nav">
@@ -363,7 +363,8 @@
                         was an adjunct professor at DePaul University and is the UX Design Instructor at The Starter
                         League, where she first developed her activity-based approach for teaching core design concepts.
                         Carolyn is the co-founder of The School for Digital Craftsmanship and co-author of two books,
-                        <cite>A Project Guide to UX Design</cite> and <cite>Adventures in Experience Design</cite>.</p>
+                        <cite>A Project Guide to UX Design</cite> and <cite>Adventures in Experience Design</cite>.
+                    </p>
 
                 </div><!--
   
@@ -560,7 +561,8 @@
                                 World</a></cite>), speaker, trainer, and consultant. Estelle shares esoteric tidbits
                         learned while programming CSS, JavaScript and HTML, provides tutorials and detailed grids of
                         CSS3 and HTML5 browser support at <a href="http://www.standardista.com/">Standardista</a>. Her
-                        tutorials and workshops are available on <a href="http://estelle.github.io/">GitHub</a>.</p>
+                        tutorials and workshops are available on <a href="http://estelle.github.io/">GitHub</a>.
+                    </p>
 
                 </div><!--
   
@@ -722,7 +724,8 @@
                         education, and community. Creative Director and co-author of <cite>InterACT with Web Standards:
                             A holistic approach to web design</cite>, Leslie has written articles for publications such
                         as <cite>A List Apart</cite>, <cite>The Pastry Box</cite>, <cite>Ladies in Tech</cite>, and
-                        <cite>.net Magazine</cite>.</p>
+                        <cite>.net Magazine</cite>.
+                    </p>
 
                 </div><!--
   
