--- a/index.html
+++ b/index.html
@@ -49,20 +49,26 @@
     <section class="row">
         <div class="grid">
 
-            <!-- Spekers -->
+            <!-- Speakers -->
 
             <section class="teaser col-1-3">
                 <a href="speakers.html">
                     <h5>Speakers</h5>
+                    <img src="assets/images/home/speakers.jpg" alt="Professional Speakers">
                     <h3>World-Class Speakers</h3>
                 </a>
                 <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.
                 </p>
-            </section>
+            </section><!--
+
+             Schedule 
+
+            -->
             <section class="teaser col-1-3">
                 <a href="schedule.html">
                     <h5>Schedule</h5>
                     <h3>Three Inspiring Days</h3>
+                    <img src="assets/images/home/schedule.jpg" alt="Schedule">
                 </a>
                 <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
             </section><!--
@@ -74,6 +80,7 @@
                 <a href="venue.html">
                     <h5>Venue</h5>
                     <h3>The Chicago Theatre</h3>
+                    <img src="assets/images/home/venue.jpg" alt="Venue">
                 </a>
                 <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.
                 </p>
