--- a/speakers.html
+++ b/speakers.html
@@ -87,7 +87,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/aaron-irizarry.jpg" alt="Aaron Irizarry">
                         <ul>
                             <li><a href="https://twitter.com/aaroni">@aaroni</a></li>
                             <li><a href="http://www.thisisaaronslife.com/">thisisaaronslife.com</a></li>
@@ -134,7 +134,8 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/adam-connor.jpg" alt="
+                        Adam Connor">
                         <ul>
                             <li><a href="https://twitter.com/adamconnor">@adamconnor</a></li>
                             <li><a href="http://adamconnor.com/">adamconnor.com</a></li>
@@ -170,7 +171,8 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/aj-self.jpg" alt="Aj 
+                        Self">
                         <ul>
                             <li><a href="https://twitter.com/ajself">@ajself</a></li>
                             <li><a href="http://www.ajself.com/">ajself.com</a></li>
@@ -207,7 +209,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/arman-ghosh.jpg" alt="Arman Ghosh">
                         <ul>
                             <li><a href="https://twitter.com/armanghosh">@armanghosh</a></li>
                         </ul>
@@ -245,7 +247,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/bermon-painter.jpg" alt="Bermon Painter">
                         <ul>
                             <li><a href="https://twitter.com/bermonpainter">@bermonpainter</a></li>
                             <li><a href="http://bermonpainter.com/">bermonpainter.com</a></li>
@@ -293,7 +295,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/brad-smith.jpg" alt="Brad Smith">
                         <ul>
                             <li><a href="http://www.webvisionsevent.com/">webvisionsevent.com</a></li>
                             <li><a href="http://www.instituteforsocialgood.org/">instituteforsocialgood.org</a></li>
@@ -330,7 +332,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/candi-lemoine.jpg" alt="Candi Lemoine">
                         <ul>
                             <li><a href="https://twitter.com/candicodeit">@candicodeit</a></li>
                             <li><a href="http://candicode.it/">candicode.it</a></li>
@@ -371,7 +373,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/carolyn-chandler.jpg" alt="Carolyn Chandler">
                         <ul>
                             <li><a href="https://twitter.com/chanan">@chanan</a></li>
                             <li><a href="http://www.dhalo.com/">dhalo.com</a></li>
@@ -408,7 +410,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/chris-mills.jpg" alt="Chris Mills">
                         <ul>
                             <li><a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a></li>
                             <li><a href="https://developer.mozilla.org/">developer.mozilla.org</a></li>
@@ -443,7 +445,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/dan-denney.jpg" alt="Dan Denney">
                         <ul>
                             <li><a href="https://twitter.com/dandenney">@dandenney</a></li>
                             <li><a href="http://dandenney.com/">dandenney.com</a></li>
@@ -482,7 +484,8 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/darby-frey.jpg" alt="
+                        Darby Frey">
                         <ul>
                             <li><a href="https://twitter.com/darbyfrey">@darbyfrey</a></li>
                             <li><a href="http://darbyfrey.com/">darbyfrey.com</a></li>
@@ -527,7 +530,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/erica-decker.jpg" alt="Erica Decker">
                         <ul>
                             <li><a href="http://ericadecker.com/">ericadecker.com</a></li>
                         </ul>
@@ -569,7 +572,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/estelle-weyl.jpg" alt="Estelle Weyl">
                         <ul>
                             <li><a href="https://twitter.com/estellevw">@estellevw</a></li>
                             <li><a href="http://standardista.com/">standardista.com</a></li>
@@ -609,7 +612,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/jen-myers.jpg" alt="Jen Myers">
                         <ul>
                             <li><a href="https://twitter.com/antiheroine">@antiheroine</a></li>
                             <li><a href="http://jenmyers.net/">jenmyers.net</a></li>
@@ -648,7 +651,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/jenn-downs.jpg" alt="Jen Downs">
                         <ul>
                             <li><a href="https://twitter.com/beparticular">@beparticular</a></li>
                             <li><a href="http://beparticular.com/">beparticular.com</a></li>
@@ -687,7 +690,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/jennifer-jones.jpg" alt="Jennifer Jones">
                         <ul>
                             <li><a href="https://twitter.com/Foerocious">@foerocious</a></li>
                             <li><a href="http://crampedconversations.com/">crampedconversations.com</a></li>
@@ -732,7 +735,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/leslie-jensen-inman.jpg" alt="Leslie Jensen-Inman">
                         <ul>
                             <li><a href="https://twitter.com/jenseninman">@jenseninman</a></li>
                             <li><a href="http://unicorninstitute.com/">unicorninstitute.com</a></li>
@@ -775,7 +778,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/maya-bruck.jpg" alt="Maya Bruck">
                         <ul>
                             <li><a href="https://twitter.com/mayabruck">@mayabruck</a></li>
                             <li><a href="http://pixotech.com/">pixotech.com</a></li>
@@ -822,7 +825,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/russ-unger.jpg" alt="Russ Unger">
                         <ul>
                             <li><a href="https://twitter.com/russu">@russu</a></li>
                             <li><a href="http://www.userglue.com/">userglue.com</a></li>
@@ -858,7 +861,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/shay-howe.jpg" alt="Shay Howe">
                         <ul>
                             <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
                             <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
@@ -895,7 +898,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/tessa-harmon.jpg" alt="Tessa Harmon">
                         <ul>
                             <li><a href="https://twitter.com/tessaharmon">@tessaharmon</a></li>
                             <li><a href="http://tessaharmon.com/">tessaharmon.com</a></li>
@@ -935,7 +938,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/victoria-pater.jpg" alt="Victoria Pater">
                         <ul>
                             <li><a href="https://twitter.com/typeis4lovers">@typeis4lovers</a></li>
                             <li><a href="http://victoriapater.com/">victoriapater.com</a></li>
@@ -976,7 +979,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/vitaly-friedman.jpg" alt="Vitaly Friedman">
                         <ul>
                             <li><a href="https://twitter.com/smashingmag">@smashingmag</a></li>
                             <li><a href="http://smashingmagazine.com/">smashingmagazine.com</a></li>
@@ -1026,7 +1029,7 @@
             -->
                 <aside class="col-1-3">
                     <div class="speaker-info">
-
+                        <img src="assets/images/speakers/zoe-mickley-gillenwater.jpg" alt="Zoe Mickley Gillenwater">
                         <ul>
                             <li><a href="https://twitter.com/zomigi">@zomigi</a></li>
                             <li><a href="http://zomigi.com/">zomigi.com</a></li>
