feat: add new sections to the Venue page

--- a/venue.html
+++ b/venue.html
@@ -48,6 +48,23 @@
 
         </div>
     </section>
+
+    <!--Main section-->
+
+    <section class="row">
+        <div class="grid">
+
+            <section class="venue-theatre">
+
+            </section>
+
+            <section class="venue-hotel">
+
+            </section>
+
+        </div>
+
+    </section>
     <!--Footer-->
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
