--- a/venue.html
+++ b/venue.html
@@ -56,9 +56,15 @@
 
             <section class="venue-theatre">
 
+                <div class="col-1-3"></div><!--
+                --><iframe class="col-2-3"></iframe>
+
             </section>
 
             <section class="venue-hotel">
+
+                <div class="col-1-3"></div><!--
+                --><iframe class="col-2-3"></iframe>
 
             </section>
 
