feat: add basic section on the Register page

--- a/register.html
+++ b/register.html
@@ -50,6 +50,13 @@
         </div>
     </section>
 
+    <section class="row">
+        <div class="grid">
+
+        </div>
+
+    </section>
+
     <!--Footer-->
 
     <footer class="primary-footer container group">
