--- a/register.html
+++ b/register.html
@@ -52,7 +52,13 @@
 
     <section class="row">
         <div class="grid">
+            <section class="col-2-3">
 
+            </section><!--
+            -->
+            <form class="col-1-3">
+
+            </form>
         </div>
 
     </section>
