--- a/register.html
+++ b/register.html
@@ -70,7 +70,36 @@
                 </ul>
             </section><!--
             -->
-            <form class="col-1-3">
+            <form class="col-1-3" action="#" method="post">
+                <fieldset>
+                    <label>
+                        Name
+                        <input type="text" name="name" placeholder="Full name" required>
+                    </label>
+
+                    <label>
+                        Email
+                        <input type="email" name="email" placeholder="Email adress" required>
+                    </label>
+
+                    <label>
+                        Number of Passes
+                        <select name="quantity" required>
+                            <option value="1" selected></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                            <option value="4"></option>
+                            <option value="5"></option>
+                        </select>
+                    </label>
+
+                    <label>
+                        Comments
+                        <textarea name="comments"></textarea>
+                    </label>
+                </fieldset>
+
+                <input type="submit" name="submit" value="Purchase">
 
             </form>
         </div>
