--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
             </section><!--
             -->
             <form class="col-1-3" action="#" method="post">
-                <fieldset>
+                <fieldset class="register-group">
                     <label>
                         Name
                         <input type="text" name="name" placeholder="Full name" required>
