feat: add values to Number of Passes element of the form

--- a/register.html
+++ b/register.html
@@ -85,11 +85,11 @@
                     <label>
                         Number of Passes
                         <select name="quantity" required>
-                            <option value="1" selected></option>
-                            <option value="2"></option>
-                            <option value="3"></option>
-                            <option value="4"></option>
-                            <option value="5"></option>
+                            <option value="1" selected>1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
                         </select>
                     </label>
 
