feat: creat a row class section to the Schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -50,6 +50,12 @@
         </div>
     </section>
 
+    <section class="row">
+        <div class="container">
+
+        </div>
+    </section>
+
     <!--Foorer-->
     <footer class="primary-footer container group">
         <small>&copy; Styles Conference</small>
